objects/Case.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>LOL_CaseView</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.PRIORITY</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <label>LOL CaseView</label>
        <sharedTo>
            <role>ChannelSalesTeam</role>
            <role>CustomerSupportInternational</role>
            <role>CustomerSupportNorthAmerica</role>
            <role>DirectorChannelSales</role>
            <role>DirectorDirectSales</role>
            <role>EasternSalesTeam</role>
            <role>InstallationRepairServices</role>
            <role>MarketingTeam</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LPD_EMEA_Customer_Service_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LPD EMEA Customer Service</label>
        <queue>LPD_EMEA_Customer_Service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LPD_NA_Customer_Service_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LPD NA Customer Service</label>
        <queue>LPD_NA_Customer_Service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LPD_Technical_Service_Inquiry_EMEA_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LPD Technical Service Inquiry EMEA Queue</label>
        <queue>LPD_Technical_Service_Inquiry_EMEA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LPD_Technical_Service_Inquiry_NA_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LPD Technical Service Inquiry NA Queue</label>
        <queue>LPD_Technical_Service_Inquiry_NA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LPD_Technical_Service_Issue_EMEA_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LPD Technical Service Issue EMEA Queue</label>
        <queue>LPD_Technical_Service_Issue_EMEA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LPD_Technical_Service_Issue_NA_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LPD Technical Service Issue NA Queue</label>
        <queue>LPD_Technical_Service_Issue_NA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>OE_Export_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>OE Export</label>
        <queue>OE_Export</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P_S_Account_Conversion_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>P&amp;S Account Conversion Queue</label>
        <queue>P_S_Account_Conversion_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WLPD_EMEA_Fax_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>WLPD EMEA Fax</label>
        <queue>WLPD_EMEA_Fax</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WLPD_OE_Belgium_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>WLPD OE Belgium</label>
        <queue>WLPD_OE_Belgium</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>